cambio en comentario

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     --------------------Etiquetas de agruapacion-----------------
 
-        mark ->
+        mark -> marca una aparte de html
 
 
 
