--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/FMNuTj89RzU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </section>
+    <section>
       <h2>Viajes</h2>
     </section>
     <aside></aside>
